# jupy-juce

./: .cursorrules  README.md  core.html  core.html.md  hello.py  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
FH_SQLModel/: _modidx.py  core.py
jupy_juice/: core.py
jupyter_assistant/: _modidx.py  core.py
nbs/: 00_core.ipynb  01_claudette_mcp_exploration.ipynb  index.ipynb  nbdev.yml  test_pyai.ipynb
