[project]
name = "fh-sqlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "ndendic"}
]
keywords = ["nbdev", "jupyter", "notebook", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "ipynbname>=2024.1.0.0",
    "jupyter>=1.1.1",
    "nbdev>=2.3.34",
    "pydantic-ai>=0.0.15",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = []

[project.entry-points.nbdev]
"FH_SQLModel" = "FH_SQLModel._modidx:d"
